k8s/argocd/Manifest/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.devcraft.app`) # change to your domain
      kind: Rule
      services:
        - name: argocd-server
          port: 443
      middlewares:
        - name: default-headers
  tls:
    secretName: devcraft-tls # change to your cert name
